hphp/hack/test/typecheck/function_pointer/reified_targs_mismatched_parameters.php.exp
File "reified_targs_mismatched_parameters.php", line 8, characters 6-12:
Invalid argument (Typing[4110])
File "reified_targs_mismatched_parameters.php", line 6, characters 12-14:
Expected `int`
File "reified_targs_mismatched_parameters.php", line 3, characters 23-23:
  via this generic `T`
File "reified_targs_mismatched_parameters.php", line 8, characters 6-12:
But got `string`
