hphp/hack/test/typecheck/function_pointer/reified_targs_mismatched_parameters.php
<?hh

function foo<reify T>(T $x): void {}

function test(): void {
  $x = foo<int>;

  $x("Hello");
}
